Fix title position on small screen

--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -3,15 +3,14 @@
 /* Dropdown Button */
 .dropbtn {
     background-color: white;
-    padding: 16px;
-    font-size: 2em;
+    font-size: 1.5em;
     cursor: pointer;
 }
 
-/* The container <div> - needed to position the dropdown content */
+/* The container <div> - needed to position the dropdown content (Hidden by Default) */
 .dropdown {
-    position: relative;
-    display: inline-block;
+    display: none;
+    float: left;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -52,4 +51,12 @@
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+/* Header config for small screens */
+@media screen and (max-width: 1000px) {
+
+    .dropdown {
+        display: inline-block;
+    }
 }
