--- a/css/grid-gallery.css
+++ b/css/grid-gallery.css
@@ -155,7 +155,9 @@
 	text-align: center;
 	font-size: 1.2em;
 	line-height: 2.4em;
-	box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+	/*box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);*/
+	border-style: solid;
+	border-width: thin;
 }
 
 .see_more > i {
